--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcsh 'Short stories'
 - !lcc 'PS'
+- GITenberg
 title: Dead Man's Planet
 url: http://www.gutenberg.org/ebooks/30773
